--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     implementation 'com.android.support:palette-v7:26.1.0'
 
     implementation 'com.google.android.gms:play-services-maps:11.6.0'
+    implementation 'com.google.firebase:firebase-auth:11.6.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
