--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDMrCWqIsDQ95vFLEnPEgqX7j7Z-H2duZM" />
+            android:value="YOUR_API_KEY" />
 
         <activity android:name=".Activity.MainActivity" />
         <activity android:name=".Activity.DetailPlaceActivity" />
